# esp32c3-experiments

./: .gitignore  Cargo.toml  README.md  boot.stderr  build.map  build.rs  esp32c3-link.x  esp32c3-memory.x  esp32c3.dump  gdbinit  openocd.cfg  riscv-link.x
.cargo/: config
examples/: blinky.rs
src/: lib.rs  main.rs
