[package]
name = "esp32c3"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
riscv = "0.6.0"
esp32c3 = "0.1.2"


[dependencies.riscv-rt] 
version = "0.8.0"
git = "https://github.com/MabezDev/riscv-rt"
rev = "6b55e4aa3895924e31bcd151f2f0ab840836fa07"